# python-builddsl

./: .dmypy.json  .flake8  .gitignore  404.html  MANIFEST.in  README.md  index.html  package.yml  pydoc-markdown.yml  pyproject.toml  python-package.yml  readme.md  search.html  setup.py  sitemap.xml
.changelog/: 0.7.5.toml  0.7.6.toml  0.7.7.toml  0.8.0.toml  0.8.1.toml  0.8.2.toml  0.8.3.toml  0.8.4.toml  0.8.5.toml  0.9.0.toml  1.0.0.toml  1.0.1.toml  _unreleased.toml  _unreleased.yml
.github/workflows/: python-package.yml  python.yml  test.yml
api-documentation/craftr.dsl/: index.html
api-documentation/craftr.dsl.rewrite/: index.html
api-documentation/craftr.dsl.runtime/: index.html
api-documentation/craftr.dsl.transpiler/: index.html
api/cli/: index.html
api/docs/: index.html
api/usage-example/: index.html
changelog/: index.html
docs/: build.novella  quickstart.md  requirements.txt
docs/api/: index.md
docs/content/: index.md  introduction.md
docs/content/api/: cli.md  docs.md  usage-example.md
docs/content/syntax/: closures.md  function-args.md  function-calls.md  limitations.md  name-resolution.md
docs/syntax/: closures.md  function-args.md  function-calls.md  index.md  name-resolution.md
examples/: closure.py  closure_hello_world.craftr  configurable.kmi  context-manager.kmi  funcdef.craftr  hello.craftr  hello.kahmi  hello.kmi  nested-scope.craftr  scope.craftr  scope.kmi  strict-configurable.kmi  yaml.craftr  yaml.kmi
introduction/: index.html
search/: search_index.json
src/builddsl/: __init__.py  __main__.py  _execute.py  _rewriter.py  _runtime.py  _transpiler.py  api.py  ast_utils.py  closure.py  rewriter.py  targets.py  transpiler.py  util.py
src/craftr/dsl/: __init__.py  __main__.py  _execute.py  _rewriter.py  _runtime.py  _transpiler.py  _util.py  ast.py  ast_utils.py  closure.py  parser.py  rewrite.py  runtime.py  transpiler.py
src/craftr_dsl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/kahmi/dsl/: __init__.py  __main__.py  ast.py  parser.py  runtime.py  transpiler.py  util.py
src/kahmi/dsl/macros/: __init__.py
src/tests/: rewriter_test.py  test_examples.py  test_runtime.py
src/tests/rewriter_testcases/unparen_call/: unparen_call_with_no_commas.txt
src/tests/transpiler_testcases/closures/: nested_closure_2.txt
src/tests/utils/: testcaseparser.py
syntax/closures/: index.html
syntax/function-args/: index.html
syntax/function-calls/: index.html
syntax/limitations/: index.html
syntax/name-resolution/: index.html
test/: test_rewriter.py  test_runtime.py  test_transpiler.py
test/rewriter_testcases/pure_python/: class_def_2.txt  some_operators.txt
test/rewriter_testcases/unparen_call/: unparen_call_multiline.txt
test/transpiler_testcases/closures/: import_in_closure.txt
test/transpiler_testcases/local_vars/: python_imports.txt  python_imports_with_closure.txt
test/utils/: testcaseparser.py  testcaseparser_test.py
