[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "builddsl"
version = "0.9.0"
description = "A superset of the Python programming language with support for closures and multi-line lambdas."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "builddsl", from="src" }]

[tool.poetry.urls]
Homepage = "https://github.com/NiklasRosenstein/python-builddsl"
Documentation = "https://niklasrosenstein.github.io/python-builddsl/"

[tool.poetry.dependencies]
python = "^3.7"
"nr.util" = ">=0.7.0,<1.0.0"
termcolor = "^1.1.0"
typing-extensions = ">=3.0.0"
# dataclasses = {version="^0.6", python="~3.6"}

[tool.poetry.extras]
astor = ['astor ^0.8.1']

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
types-termcolor = "*"
# types-dataclasses = {version="*", python="~3.6"}
astor = "^0.8.1"

[tool.slap]
typed = true

[tool.slap.test]
black = "black --check src/"
check = "slap check"
flake8 = "flake8 src/"
isort = "isort --check-only src/"
mypy = "dmypy run src/"
pytest = "pytest test/ -vv"

[tool.slap.run]
"docs:build" = "cd docs && novella --base-url kraken-core/"
"docs:dev" = "cd docs && novella --serve"
fmt = "black src/ && isort src/"
